--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -2,11 +2,20 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-        app:startDestination="@id/mainFragment"
+        app:startDestination="@id/countriesFragment"
         tools:ignore="UnusedNavigation">
     <fragment
-            android:id="@+id/mainFragment"
-            android:name="kodizfun.countries.layer_presentation.view.MainFragment"
+            android:id="@+id/countriesFragment"
+            android:name="kodizfun.countries.layer_presentation.view.CountriesFragment"
             android:label="fragment_main"
-            tools:layout="@layout/fragment_main"/>
+            tools:layout="@layout/fragment_countries">
+        <action
+            android:id="@+id/action_countriesFragment_to_countryDetailsFragment"
+            app:destination="@id/countryDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/countryDetailsFragment"
+        android:name="kodizfun.countries.layer_presentation.view.CountryDetailsFragment"
+        android:label="fragment_country_details"
+        tools:layout="@layout/fragment_country_details" />
 </navigation>
